# ros_python_pkg

./: CMakeLists.txt  README.md  README.txt  install.sh  package.xml  setup.py
config/: example_nodes.yaml
launch/: example_nodes.launch  generic_node.launch
nodes/: example_publisher  example_subscriber
scripts/: example_py_script  example_sh_script.py  template_py_script  template_sh_script
src/ros_python_pkg/: __init__.py  base_node.py
src/ros_python_pkg/examples/: __init__.py  example_publisher.py  example_subscriber.py
src/ros_python_pkg/util/: __init__.py
src/template_rospy_pkg/: __init__.py  example_publisher.py  example_subscriber.py
src/template_rospy_pkg/util/: __init__.py  config_utils.py
